<resources>
    <string name="app_name">DLPlayer</string>

    <string name="tab_downloading">downloading</string>
    <string name="tab_downloaded">downloaded</string>

    <string name="tips_create_task_complete">create task has been done!</string>

    <string name="action_search">Search</string>
    <string name="action_setting">Setting</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>

    <string name="action_start">Start/Resume</string>
    <string name="action_pause">Pause</string>
    <string name="action_delete">Delete</string>
    <string name="action_open_with_other">Open with other app</string>

    <string name="option_share">Share</string>

    <string name="add_torrent">Add Torrent</string>
    <string name="add_magnet">Add_Magnet</string>
    <string name="add_magnet_title">Please type magnet url</string>

    <string name="sure">Sure</string>

    <string name="setting_download_location_title">Downloaded location</string>
    <string name="setting_open_select_dlg_title">Select dialog</string>
    <string name="setting_download_only_wifi_title">Only wifi</string>
    <string name="setting_keep_screen_on_title">Keep screen on</string>

    <string name="setting_download_location">Set downloaded file location</string>
    <string name="setting_open_select_dlg">Show select dialog before downloading</string>
    <string name="setting_download_only_wifi">Download only in wifi</string>
    <string name="setting_keep_screen_on">Keep screen on</string>

    <string name="speed">speed</string>

    <string name="about">
        %s V%s all rights reserved.\n
        free software alliance.
    </string>

    <string name="about_title">About</string>
    <string name="about_description"><![CDATA[This is a test dialog.\n    —free soft alliance.]]></string>
    <string name="about_format">%s V%s</string>

    <string name="dlg_delete_title">delete item</string>
    <string name="dlg_delete_content">delete item</string>
    <string name="dlg_confirm">confirm</string>
    <string name="dlg_cancel">cancel</string>
</resources>
