<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_black"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_setting"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:icon="@drawable/ic_about"
        app:showAsAction="never"/>

    <item android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:icon="@drawable/ic_exit"
        app:showAsAction="never"/>

</menu>