<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="167dp"
    android:layout_height="wrap_content"
    android:background="@drawable/option_pop_window_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/action_pause"
        style="@style/OptionItemTextView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:text="@string/action_pause"/>

    <TextView
        android:id="@+id/action_play"
        style="@style/OptionItemTextView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:text="@string/action_start"/>

    <TextView
        android:id="@+id/action_delete"
        style="@style/OptionItemTextView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:text="@string/action_delete"/>

</LinearLayout>